--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,52 +48,71 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <EditText
-                    android:id="@+id/et_login_id"
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_login_id"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="30dp"
-                    android:layout_marginTop="20dp"
-                    android:hint="@string/login_id_hint"
-                    android:imeOptions="actionNext"
-                    android:inputType="text"
+                    android:layout_marginTop="10dp"
+                    app:endIconMode="clear_text"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_login_id" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_login_id">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_login_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/login_id_hint"
+                        android:imeOptions="actionNext"
+                        android:inputType="text" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_login_pw"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="30dp"
+                    android:layout_marginTop="10dp"
+                    app:endIconMode="password_toggle"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_login_pw">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_login_pw"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/login_pw_hint"
+                        android:imeOptions="actionNext"
+                        android:inputType="textPassword" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/tv_login_pw"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="20dp"
                     android:text="@string/login_pw"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/et_login_id" />
-
-                <EditText
-                    android:id="@+id/et_login_pw"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="30dp"
-                    android:layout_marginTop="20dp"
-                    android:hint="@string/login_pw_hint"
-                    android:imeOptions="actionDone"
-                    android:inputType="textPassword"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_login_pw" />
+                    app:layout_constraintTop_toBottomOf="@id/til_login_id" />
 
                 <CheckBox
                     android:id="@+id/cb_login"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
-                    app:layout_constraintStart_toStartOf="@id/et_login_pw"
-                    app:layout_constraintTop_toBottomOf="@id/et_login_pw" />
+                    app:layout_constraintStart_toStartOf="@id/til_login_pw"
+                    app:layout_constraintTop_toBottomOf="@id/til_login_pw" />
 
                 <TextView
                     android:id="@+id/tv_login_auto"
