--- a/app/src/main/res/layout/item_home_friend_profile.xml
+++ b/app/src/main/res/layout/item_home_friend_profile.xml
@@ -73,7 +73,7 @@
 
         <TextView
             android:id="@+id/tv_home_friend_music_name"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ellipsize="end"
